@@ -4,6 +4,11 @@ import java.util.Arrays;
 import java.util.List;
 import org.veupathdb.service.eda.ds.constraints.ConstraintSpec;
 import org.veupathdb.service.eda.ds.plugin.AbstractPlugin;
+import org.veupathdb.service.eda.ds.plugin.alphadiv.AlphaDivBoxplotPlugin;
+import org.veupathdb.service.eda.ds.plugin.alphadiv.AlphaDivScatterplotPlugin;
+import org.veupathdb.service.eda.ds.plugin.abundance.AbundanceBoxplotPlugin;
+import org.veupathdb.service.eda.ds.plugin.abundance.AbundanceScatterplotPlugin;
+import org.veupathdb.service.eda.ds.plugin.betadiv.BetaDivScatterplotPlugin;
 import org.veupathdb.service.eda.ds.plugin.pass.BarplotPlugin;
 import org.veupathdb.service.eda.ds.plugin.pass.BoxplotPlugin;
 import org.veupathdb.service.eda.ds.plugin.pass.ContTablePlugin;
@@ -26,23 +31,41 @@ import org.veupathdb.service.eda.generated.model.VisualizationOverviewImpl;
 
 public class AppsMetadata {
 
+  public static final String CLINEPI_PROJECT = "ClinEpiDB";
+  public static final String MICROBIOME_PROJECT = "MicrobiomeDB";
+
   // NOTE: these names must match the url segments defined in the api.raml
+  // Pass vizs are now different based on mbio vs clinepi so we need to adjust the below array?
   public static final AppsGetResponse APPS = apps(
-      app("pass", "Pass-Through", 
+      app("pass", "Pass-Through", null,
           "A collection of visualizations designed to support the unbiased exploration of relationships between variables",
-          Arrays.asList("ClinEpiDB", "MicrobiomeDB"),
+          Arrays.asList(CLINEPI_PROJECT, MICROBIOME_PROJECT),
           viz("histogram", new HistogramPlugin()),
           viz("barplot", new BarplotPlugin()),
           viz("scatterplot", new ScatterplotPlugin()),
           viz("boxplot", new BoxplotPlugin()),
           viz("twobytwo", new TwoByTwoPlugin()),
           viz("conttable", new ContTablePlugin()),
-          viz("timeseries", new TimeSeriesPlugin()),
+          viz("lineplot", new LineplotPlugin()),
           viz("densityplot", new DensityplotPlugin()),
           viz("heatmap", new HeatmapPlugin()),
           viz("map-markers", new MapPlugin())),
-      app("sample", "Sample", "Wrapper app for sample/test plugins",
-          Arrays.asList(""),
+      app("alphadiv", "Alpha Diversity", "AlphaDivComputation",
+          "A collection of visualizations designed to support the unbiased exploration of relationships between variables and Alpha Diversity.",
+          List.of(MICROBIOME_PROJECT),
+          viz("boxplot", new AlphaDivBoxplotPlugin()),
+          viz("scatterplot", new AlphaDivScatterplotPlugin())),
+      app("abundance", "Ranked Abundance", "RankedAbundanceComputation",
+          "A collection of visualizations designed to support the unbiased exploration of relationships between variables and abundance data.",
+          List.of(MICROBIOME_PROJECT),
+          viz("boxplot", new AbundanceBoxplotPlugin()),
+          viz("scatterplot", new AbundanceScatterplotPlugin())),
+      app("betadiv", "Beta Diversity", "BetaDivComputation",
+          "A collection of visualizations designed to support the unbiased exploration of relationships between variables and Beta Diversity.",
+          List.of(MICROBIOME_PROJECT),
+          viz("scatterplot", new BetaDivScatterplotPlugin())),
+      app("sample", "Sample", "Wrapper app for sample/test plugins", null,
+          List.of(),
           viz("record-count", new RecordCountPlugin()),
           viz("multi-stream", new MultiStreamPlugin()))
   );
@@ -57,12 +80,13 @@ public class AppsMetadata {
     return responseObj;
   }
 
-  private static AppOverview app(String name, String displayName, String description, List<String> projects, VisualizationOverview... visualizations) {
+  private static AppOverview app(String name, String displayName, String computeName, String description, List<String> projects, VisualizationOverview... visualizations) {
     AppOverviewImpl app = new AppOverviewImpl();
     app.setName(name);
     app.setDisplayName(displayName);
     app.setDescription(description);
     app.setProjects(projects);
+    app.setComputeName(computeName);
     app.setVisualizations(Arrays.asList(visualizations));
     return app;
   }
