@@ -3,7 +3,6 @@ package org.veupathdb.service.eda.ds.plugin.pass;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -18,6 +17,7 @@ import org.veupathdb.service.eda.generated.model.LineplotPostRequest;
 import org.veupathdb.service.eda.generated.model.LineplotSpec;
 import org.veupathdb.service.eda.generated.model.VariableSpec;
 
+import static org.veupathdb.service.eda.ds.metadata.AppsMetadata.MICROBIOME_PROJECT;
 import static org.veupathdb.service.eda.ds.util.RServeClient.streamResult;
 import static org.veupathdb.service.eda.ds.util.RServeClient.useRConnectionWithRemoteFiles;
 
@@ -35,12 +35,7 @@ public class LineplotPlugin extends AbstractPlugin<LineplotPostRequest, Lineplot
 
   @Override
   public List<String> getProjects() {
-    return Arrays.asList("MicrobiomeDB");
-  }
-  
-  @Override
-  public Integer getMaxPanels() {
-    return 25;
+    return List.of(MICROBIOME_PROJECT);
   }
   
   @Override
@@ -65,7 +60,8 @@ public class LineplotPlugin extends AbstractPlugin<LineplotPostRequest, Lineplot
         .element("facetVariable")
           .required(false)
           .maxVars(2)
-          .description("Variable(s) must have 25 or fewer cartesian products and be of the same or a parent entity as the Overlay variable.")
+          .maxValues(7)
+          .description("Variable(s) must have 7 or fewer unique values and be of the same or a parent entity as the Overlay variable.")
       .done();
   }
 
