@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -22,6 +21,7 @@ import org.veupathdb.service.eda.generated.model.ScatterplotPostRequest;
 import org.veupathdb.service.eda.generated.model.ScatterplotSpec;
 import org.veupathdb.service.eda.generated.model.VariableSpec;
 
+import static org.veupathdb.service.eda.ds.metadata.AppsMetadata.CLINEPI_PROJECT;
 import static org.veupathdb.service.eda.ds.util.RServeClient.streamResult;
 import static org.veupathdb.service.eda.ds.util.RServeClient.useRConnectionWithProcessedRemoteFiles;
 
@@ -41,12 +41,7 @@ public class ScatterplotPlugin extends AbstractPlugin<ScatterplotPostRequest, Sc
 
   @Override
   public List<String> getProjects() {
-    return Arrays.asList("ClinEpiDB", "MicrobiomeDB");
-  }
-  
-  @Override
-  public Integer getMaxPanels() {
-    return 25;
+    return List.of(CLINEPI_PROJECT);
   }
   
   @Override
@@ -71,7 +66,8 @@ public class ScatterplotPlugin extends AbstractPlugin<ScatterplotPostRequest, Sc
         .element("facetVariable")
           .required(false)
           .maxVars(2)
-          .description("Variable(s) must have 25 or fewer cartesian products and be of the same or a parent entity as the Overlay variable.")
+          .maxValues(7)
+          .description("Variable(s) must have 7 or fewer unique values and be of the same or a parent entity as the Overlay variable.")
       .done();
   }
   
