@@ -1,9 +1,10 @@
 package org.veupathdb.service.eda.ds.plugin.pass;
 
-import java.util.Arrays;
 import java.util.List;
 import org.veupathdb.service.eda.ds.constraints.ConstraintSpec;
 import org.veupathdb.service.eda.generated.model.APIVariableType;
+
+import static org.veupathdb.service.eda.ds.metadata.AppsMetadata.CLINEPI_PROJECT;
 
 public class TimeSeriesPlugin extends LineplotPlugin {
 
@@ -19,7 +20,7 @@ public class TimeSeriesPlugin extends LineplotPlugin {
 
   @Override
   public List<String> getProjects() {
-    return Arrays.asList("ClinEpiDB");
+    return List.of(CLINEPI_PROJECT);
   }
   
   @Override
@@ -39,7 +40,8 @@ public class TimeSeriesPlugin extends LineplotPlugin {
         .element("facetVariable")
           .required(false)
           .maxVars(2)
-          .description("Variable(s) must have 25 or fewer cartesian products and be of the same or a parent entity as the Overlay variable.")
+          .maxValues(7)
+          .description("Variable(s) must have 7 or fewer unique values and be of the same or a parent entity as the Overlay variable.")
       .done();
   }
 }
